<resources>
    <string name="app_name">Deutsche Verben</string>
    <string name="action_search">Search</string>
    <string name="action_sort">Sort</string>
    <string name="action_most_common">Most common</string>
    <string name="group">Group</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="select_color">Select color</string>
    <string name="verbs">Verbs</string>
    <string name="cards">Cards</string>
    <string name="favorites">Favorites</string>
    <string name="share">Share</string>
    <string name="select_show_verbs">Show verbs</string>
    <string name="group1" translatable="false">1er groupe</string>
    <string name="group2" translatable="false">2e groupe</string>
    <string name="group3" translatable="false">3e groupe</string>
    <string name="select_type_of_sort">Sort by</string>
    <string name="alphabet">Alphabet</string>
    <string name="color">Color</string>
    <string name="most_common_25">25 most common</string>
    <string name="most_common_50">50 most common</string>
    <string name="most_common_100">100 most common</string>
    <string name="most_common_300">300 most common</string>
    <string name="most_common_500">500 most common</string>
    <string name="most_common_1000">1000 most common</string>
    <string name="all">all</string>
    <string name="definition">Definition</string>
    <string name="examples">Examples</string>
    <string name="play">play</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="details">Details</string>
    <string name="favorites_add_message">Add to Favorites</string>
    <string name="favorites_del_message">Remove from Favorites</string>
    <string name="infinitif" translatable="false">Infinitif</string>
    <string name="participe" translatable="false">Participe</string>
    <string name="gerondif" translatable="false">Gérondif</string>
    <string name="imperatif" translatable="false">Impératif</string>
    <string name="indicatif" translatable="false">Indicatif</string>
    <string name="conditionnel" translatable="false">Conditionnel</string>
    <string name="subjonctif" translatable="false">Subjonctif</string>
    <string name="present" translatable="false">Présent</string>
    <string name="passe" translatable="false">Passé</string>
    <string name="passe_compose" translatable="false">Passé composé</string>
    <string name="imperfait" translatable="false">Imparfait</string>
    <string name="plus_que_parfait" translatable="false">Plus-que-parfait</string>
    <string name="passe_simple" translatable="false">Passé simple</string>
    <string name="passe_anterieur" translatable="false">Passé antérieur</string>
    <string name="futur_simple" translatable="false">Futur simple</string>
    <string name="futur_anterieur" translatable="false">Futur antérieur</string>
    <string name="database_error">Cannot connect to the Database.</string>
    <string name="tts_not_supported">android.speech.tts.TextToSpeech.Engine is not supported in your device.</string>
    <string name="tts_install_voice_data">"Voice data is missing.\nWould you like to install it?"</string>
    <string name="feedback_email" translatable="false">apps.universk@gmail.com</string>
    <string name="problem_message">
        "Hi Deutsche Verben Team,\n\n"
        "I found the following [PROBLEM TITLE HERE] in the application.\n"
        "[PROBLEM DESCRIPTION HERE]\n\n"
        "I was doing the following when it happened:\n"
        "1. [ACTION 1]\n"
        "2. [ACTION 2]\n"
        "3. [ACTION 3]\n\n"
        "Could you take a look at this?\n\n"
        "Thanks,\n"
        "[USER NAME]"
    </string>
    <string name="feedback_message">
        "Hi Deutsche Verben Team,\n\n"
        "I [like/dislike] the application in general.\n"
        "I think the following could be improved:\n"
        "1. [ITEM 1]\n"
        "2. [ITEM 2]\n"
        "[COMMENTS HERE]\n\n"
        "I was doing the following when I noticed it:\n"
        "1. [ACTION 1]\n"
        "2. [ACTION 2]\n"
        "3. [ACTION 3]\n\n"
        "Could you take a look at this?\n\n"
        "Thanks,\n"
        "[USER NAME]"
    </string>
    <string name="help">Help</string>
    <string name="more">More</string>
    <string name="volume">Volume</string>
    <string name="next">Next</string>
    <string name="got_it">Got it</string>
    <string name="conjugations">Conjugations</string>
    <string name="conjugations_description">Conjugations for different tenses.</string>
    <string name="volume_description">Text to speech uses the current media player volume.</string>
    <string name="demo">demo</string>
    <string name="verbs_text_help">Verb details include: conjugations, pronunciation, translation, definition and examples.</string>
    <string name="add_remove_from_favorites">Add or remove from Favorites</string>
    <string name="infinitive">Infinitive</string>
    <string name="report_problem">Report a problem</string>
    <string name="give_feedback">Give feedback</string>
    <string name="license">License</string>
    <string name="version">Version</string>
    <string name="copyright" translatable="false">\@2018 Universk</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_language">Language</string>
    <string name="pref_title_favorite_mode">Favorites mode</string>
    <string name="pref_favorite_mode_list" translatable="false">pref_favorite_mode_list</string>
    <string name="list" translatable="false">list</string>
    <string name="pref_font_size" translatable="false">pref_font_size</string>
    <string name="pref_show_definitions_switch" translatable="false">pref_show_definitions_switch</string>
    <string name="pref_title_show_definitions">Show verb definitions</string>
    <string name="pref_title_translation_language">Verb translation</string>
    <string name="pref_title_font_size">Font size</string>
    <string name="pref_title_text_to_speech_locale">Text to speech</string>
    <string name="pref_text_to_speech_locale" translatable="false">pref_text_to_speech_locale</string>
    <string name="pref_translation_language" translatable="false">pref_translation_language</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_enable_notifications">Verb notifications</string>
    <string name="pref_title_notification_list">Notification verb list</string>
    <string name="pref_title_notification_time">Notification time</string>
    <string name="pref_notification_list" translatable="false">pref_notification_list</string>
    <string name="pref_enable_notifications" translatable="false">pref_enable_notifications</string>
    <string name="pref_notification_time" translatable="false">pref_notification_time</string>
    <string name="pref_title_notification_frequency">Notification frequency</string>
    <string name="pref_notification_frequency" translatable="false">pref_notification_frequency</string>
</resources>