<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2018 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- Layout for a single card item -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.CardContent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/play_infinitive"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:gravity="center_horizontal"
            android:background="@drawable/touch_effect"
            android:clickable="true"
            android:focusable="true">
            <!-- <ImageView
                android:contentDescription="@string/play"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:scaleType="centerInside"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_play_arrow_black_24dp"/>
                -->
            <TextView
                android:id="@+id/infinitive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                tools:text="savoir"/>
        </LinearLayout>

        <TextView
            android:id="@+id/groupe"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="1dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            tools:text="3rd groiup"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/principalParts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:paddingBottom="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:text="kaufte, gekauft, kauft"/>

        <ImageView
            android:id="@+id/verb_image"
            android:contentDescription="@string/play"
            android:layout_width="@dimen/verb_image_width"
            android:layout_height="@dimen/verb_image_height"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/translation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:paddingBottom="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorIndigo"
            tools:text="translation"/>

        <TextView
            android:id="@+id/definition_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:text="@string/definition"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/play_definition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/touch_effect"
                android:clickable="true"
                android:focusable="true">
                <ImageView
                    android:contentDescription="@string/play"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:scaleType="centerInside"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_play_arrow_black_24dp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/definition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                tools:text="Avoir la connaissance de, posséder une science ou un art. Pouvoir, avoir la possibilité de. Être apte à, avoir le talent, la force de faire quelque chose. Connaître l’existence de. Connaître sa situation. Être su."/>

        </LinearLayout>

        <TextView
            android:id="@+id/examples_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:paddingTop="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:text="@string/examples"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/play_sample1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/touch_effect"
                android:clickable="true"
                android:focusable="true">
                <ImageView
                    android:contentDescription="@string/play"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:scaleType="centerInside"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_play_arrow_black_24dp"/>
            </LinearLayout>
            <TextView
                android:id="@+id/sample1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                tools:text="Elle sait répartir les tâches, tu sais écouter."/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/play_sample2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/touch_effect"
                android:clickable="true"
                android:focusable="true">
                <ImageView
                    android:contentDescription="@string/play"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:scaleType="centerInside"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_play_arrow_black_24dp"/>
            </LinearLayout>
            <TextView
                android:id="@+id/sample2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                tools:text="Il sait une petite clairière dans la forêt."/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/play_sample3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/touch_effect"
                android:clickable="true"
                android:focusable="true">
                <ImageView
                    android:contentDescription="@string/play"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:scaleType="centerInside"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_play_arrow_black_24dp"/>
            </LinearLayout>
            <TextView
                android:id="@+id/sample3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                tools:text="Je saurai terminer ce long travail."/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>